--- a/generate.ipynb
+++ b/generate.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\18585\\anaconda3\\envs\\151bpa2\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from transformers import (\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +84,10 @@
     "                    print(scores[:,sequence[-1]])\n",
     "                else:\n",
     "                    if input_ids[0, -1].item() in sequence:\n",
-    "                        next_token = sequence[sequence.index(input_ids[0, -1].item())+1]\n",
-    "                        scores[:,next_token] = torch.abs(scores[:,next_token])+boost #boost score of next token\n",
+    "                        next_index = sequence.index(input_ids[0, -1].item()) + 1\n",
+    "                        if next_index < len(sequence):  # Ensure it's within bounds\n",
+    "                            next_token = sequence[next_index]\n",
+    "                            scores[:, next_token] += boost  # Boost next token\n",
     "                    elif scores[:,sequence[0]] == torch.abs(scores[:,sequence[0]]):#boost only if poisitive similarity\n",
     "                        scores[:,sequence[0]]+= boost\n",
     "                    elif torch.max(scores)<0:\n",
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +153,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'c:\\\\Users\\\\18585\\\\Documents\\\\GitHub\\\\constrained_decoding_gbs_transformers/datasets/scraped_tolstoy.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdir_path\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/datasets/scraped_tolstoy.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m prompts \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrandom\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\18585\\anaconda3\\envs\\151bpa2\\lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'c:\\\\Users\\\\18585\\\\Documents\\\\GitHub\\\\constrained_decoding_gbs_transformers/datasets/scraped_tolstoy.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "f= open(dir_path+\"/datasets/scraped_tolstoy.txt\",\"r\")\n",
+    "prompts = f.read().replace('\\n', '').split(\". \")\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,10 +244,22 @@
     }
    ],
    "source": [
-    "constraints = [\"castle\", \"dragon\", \"knight\"]\n",
-    "prompt  = \"Once upon a time\"\n",
-    "story = generate_story(prompt)\n",
-    "print(story)\n",
+    "constraints = []\n",
+    "prompt  = random.choice(prompts)\n",
+    "while len(prompt)<10 or len(prompt)>100:#make prompt easy and informative enough to work with\n",
+    "    prompt = random.choice(prompts)\n",
+    "\n",
+    "while len(constraints)<3:\n",
+    "    constraint = random.choice(prompts)\n",
+    "    if len(constraint)>30:\n",
+    "        chunk = \" \".join(constraint.split()[:4]) #first 4 words make the constraint\n",
+    "        constraints.append(chunk)\n",
+    "    else:\n",
+    "        constraint = random.choice(prompts)\n",
+    "story = generate_story(prompt, constraints= constraints)\n",
+    "print(f\"Prompt:{prompt}\")\n",
+    "print(f\"Constraints:{constraints}\")\n",
+    "print(f\"Story:\\n {story}\")\n",
     "save_dir = dir_path+\"/generated_texts\"\n",
     "file_name = f\"/Chekhov style story on {prompt} with constraints {constraints}.txt\"\n",
     "with open(save_dir+file_name, \"w\") as file:\n",
