updated to generate random constraints and prompt

--- a/generate.ipynb
+++ b/generate.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\18585\\anaconda3\\envs\\151bpa2\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from transformers import (\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,22 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'c:\\\\Users\\\\18585\\\\Documents\\\\GitHub\\\\constrained_decoding_gbs_transformers/datasets/scraped_tolstoy.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m f\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdir_path\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/datasets/scraped_tolstoy.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m prompts \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrandom\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\18585\\anaconda3\\envs\\151bpa2\\lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'c:\\\\Users\\\\18585\\\\Documents\\\\GitHub\\\\constrained_decoding_gbs_transformers/datasets/scraped_tolstoy.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f= open(dir_path+\"/datasets/scraped_tolstoy.txt\",\"r\")\n",
     "prompts = f.read().replace('\\n', '').split(\". \")\n",
@@ -177,69 +155,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-59.0673])\n",
-      "Once upon a time of calamity,\n",
+      "tensor([-41.9834])\n",
+      "tensor([-32.4110])\n",
+      "tensor([-48.7115])\n",
+      "Prompt:Rostv had not yet had time to get his uniform\n",
+      "Constraints:['He was a stout,', 'He was given four', 'Make friends with my']\n",
+      "Story:\n",
+      " Rostv had not yet had time to get his uniformHe was a stout,\n",
       "\n",
-      " sheknight came into our house, and it was evident that I was not the only one\n",
+      " sturdy man, with a well-built faceHe was given four years of service,\n",
       "\n",
-      " in the house. When she went into the kitchen I was at the head of\n",
+      " and had a rank of lieutenant-colonel.\n",
+      "Make friends with my husband, he said, kissing his hands. I\n",
       "\n",
-      " the table, but I did not notice the pang of the stove, the spluttering of\n",
+      " love him.\n",
+      "The lieutenant-colonel was quite indifferent to him, and was not looking at\n",
       "\n",
-      " the door, the trembling of the stove, the smell of hay, the\n",
+      " him. He looked at his watch, and then at his hat, and the\n",
       "\n",
-      " wind, the drowsy smell of tea, and the pang of the stove that was not\n",
+      " expression of his face. He was fond of talking, and when he talked about\n",
       "\n",
-      " being carried away by the cook.\n",
-      "I did not know the cook, but I remember she was always at\n",
+      " things he was fond of talking about. He was fond of saying good-bye, and\n",
       "\n",
-      " supper, and we did not see each other, and I did not know her\n",
+      " was fond of saying something nice to him, like\n",
+      "Good-bye, darling.\n",
+      "All this was awkward and awkward for the lieutenant-colonel, and he was\n",
       "\n",
-      " name.\n",
-      "I am not in the habit of staying long in the same room, said\n",
+      " afraid that if he did not get into conversation with him, he might make a\n",
       "\n",
-      " Vassilyev. My wife is not very good-natured, and\n",
+      " mistake in the future.\n",
+      "Why dont you go away? asked the lieutenant-colonel.\n",
       "\n",
-      " we do not meet every day. When she was still a little girl she\n",
+      " Youll be late, my boy.\n",
+      "He did not know why he was so rude, and he did not know whether he\n",
       "\n",
-      " used to go out and go to the yard. I used to go to her in the evening,\n",
+      " was going to be late or not.\n",
+      "Yes, he said, after a pause. Ive come to you to-day. . . . I\n",
       "\n",
-      " and she used to say, The lady who is going to take a boy to the\n",
+      " beg you to be a little more kind.\n",
+      "And the lieutenant-colonel went away.\n",
+      "The lieutenant-colonel was silent for a long while, then he was\n",
       "\n",
-      " school, you must give her a piece of bread and water.\n",
-      "She used to say to me, We must have supper and water, too, and\n",
+      " overcome by impatience. The lieutenant-colonel sat down on a stool and\n",
       "\n",
-      " if you dont, she would say, And I would say to her, Ive got nothing\n",
+      " began reading the letter he had just received.\n",
+      "What a letter! he said, and his face was red. How\n",
       "\n",
-      " to eat.\n",
-      "Vassilyev, in a way, was very much like a child. He was very\n",
+      " wonderful it would be to have a letter from you! He was a pretty\n",
       "\n",
-      " clumsy, and his hands were clumsy, and he used to have a headache, a\n",
+      " girl and only a little girl.\n",
+      "You are a dear fellow, my boy, he said, and he sat down again on\n",
       "\n",
-      " fever, and a drop in the air.\n",
-      "When she was old, he used to go to her, and sometimes she would tell him\n",
+      " the stool.\n",
+      "Yes, a dear fellow!\n",
+      "The lieutenant-colonel went on, looking at the letter with deep\n",
       "\n",
-      " to bring him some bread and water, or to bring some meat, but he would\n",
+      " respect and sincerity, and the lieutenant-colonel began to be\n",
       "\n",
-      " stay with her, and then he would go away. When she was\n",
+      " angry and to talk.\n",
+      "I am not a nice fellow, he said, and he felt ashamed.\n",
       "\n",
-      " twenty-two, she used to go to the railway station and drink tea, and\n",
+      " I am not a nice fellow.\n",
+      "But the lieutenant-colonel was angry with him and his wife.\n",
+      "What do you want? he said, and he felt ashamed. I\n",
       "\n",
-      " she would give me tea, and then she would go to the church, and she would\n",
-      "\n",
-      " make me sit down and pray, and then she would give me a piece of bread and\n",
-      "\n",
-      " water, and then I would come home. She would say to me, You must go\n",
-      "\n",
-      " to the church, I would ask her, and she would say, I want to go.\n",
-      "I used to go to her at evening, and we used to talk about\n"
+      " will give you my word of honour. I want to hear\n"
      ]
     }
    ],
