--- a/generate.ipynb
+++ b/generate.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,25 +64,25 @@
     "        # Track generated tokens\n",
     "        boost = 10\n",
     "        self.generated_tokens.append(input_ids[0, -1].item())\n",
-    "        if len(self.generated_tokens)>10:\n",
+    "        if len(self.generated_tokens)>50:\n",
     "            self.generated_tokens.pop(0)\n",
     "        # Check if any of the required sequences appear in the generated tokens\n",
     "        for seq_idx, sequence in enumerate(self.constraints):\n",
     "            if not self.generated_chunks[seq_idx]:\n",
     "                # Check if the current sequence has appeared in the generated tokens\n",
-    "                if contains(self.generated_tokens, sequence):\n",
+    "                if self.generated_tokens[-len(sequence):] == sequence:\n",
     "                    self.generated_chunks[seq_idx] = 1  # Mark this sequence as generated\n",
-    "                    print(scores[:,sequence[-1]])\n",
+    "                    print(f\"unboosted score:{scores[:,sequence[-1]]}, constraint enforced: {tokenizer.decode(sequence, skip_special_tokens=True)}, max score: {torch.max(scores)}\")\n",
     "                else:\n",
     "                    if input_ids[0, -1].item() in sequence:\n",
-    "                        next_index = sequence.index(input_ids[0, -1].item()) + 1\n",
-    "                        if next_index < len(sequence):  # Ensure it's within bounds\n",
+    "                        next_index = sequence.index(input_ids[0, -1].item()) +1\n",
+    "                        if next_index < len(sequence) and sequence[:next_index] == self.generated_tokens[-next_index:]:  # Ensure it's within bounds and boosting is appropriate\n",
     "                            next_token = sequence[next_index]\n",
     "                            scores[:, next_token] += boost  # Boost next token\n",
     "                    elif scores[:,sequence[0]] == torch.abs(scores[:,sequence[0]]):#boost only if poisitive similarity\n",
-    "                        scores[:,sequence[0]]+= boost\n",
+    "                        scores[:,sequence[0]]+= boost/2\n",
     "                    elif torch.max(scores)<0:\n",
-    "                        scores[:,sequence[0]]+= boost\n",
+    "                        scores[:,sequence[0]]+= boost/2\n",
     "        # Once all sequences are generated, discourage <eos> generation\n",
     "        if not(all(self.generated_chunks)):\n",
     "            scores[:, self.eos_token_id] -= 10  # Strongly discourage <eos> token generation\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,89 +144,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f= open(dir_path+\"/datasets/scraped_tolstoy.txt\",\"r\")\n",
+    "f= open(dir_path+\"/datasets/scraped_tolstoy.txt\",\"r\") #prompts derived from War and Peace\n",
     "prompts = f.read().replace('\\n', '').split(\". \")\n",
+    "f= open(dir_path+\"/datasets/scraped_dickens.txt\",\"r\")#constraints derived from Tale of Two Cities\n",
+    "constraints_list = f.read().replace('\\n', '').split(\". \")\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-41.9834])\n",
-      "tensor([-32.4110])\n",
-      "tensor([-48.7115])\n",
-      "Prompt:Rostv had not yet had time to get his uniform\n",
-      "Constraints:['He was a stout,', 'He was given four', 'Make friends with my']\n",
+      "Prompt:He had not seen the hussars all that day, but had heard about them from an infantry officer\n",
+      "Constraints:['The peril of an', 'I could not see', 'Crunchers attention was here']\n",
+      "unboosted score:tensor([-77.7164]), constraint enforced: I could not see, max score: -67.96165466308594\n",
+      "unboosted score:tensor([-12.5516]), constraint enforced: The peril of an, max score: -6.466152667999268\n",
       "Story:\n",
-      " Rostv had not yet had time to get his uniformHe was a stout,\n",
+      " He had not seen the hussars all that day, but had heard about them from an infantry officer. He\n",
       "\n",
-      " sturdy man, with a well-built faceHe was given four years of service,\n",
+      " had been to see them all the evening, and had never seen them\n",
       "\n",
-      " and had a rank of lieutenant-colonel.\n",
-      "Make friends with my husband, he said, kissing his hands. I\n",
+      " again.\n",
+      "The old man had not gone off to the river, but had been going up to the\n",
       "\n",
-      " love him.\n",
-      "The lieutenant-colonel was quite indifferent to him, and was not looking at\n",
+      " highroad where the highroad was to be reached. He had no means of getting to the\n",
       "\n",
-      " him. He looked at his watch, and then at his hat, and the\n",
+      " highroad, and had only made his way along the highroad in the direction of the\n",
       "\n",
-      " expression of his face. He was fond of talking, and when he talked about\n",
+      " highroad. He had no right to go on walking, and had to\n",
       "\n",
-      " things he was fond of talking about. He was fond of saying good-bye, and\n",
+      " make up his mind to go on walking.\n",
+      "The old man was lying on the ground, exhausted, exhausted, with his eyes\n",
       "\n",
-      " was fond of saying something nice to him, like\n",
-      "Good-bye, darling.\n",
-      "All this was awkward and awkward for the lieutenant-colonel, and he was\n",
+      " filled with tears. It was evident from his face that he was exhausted,\n",
       "\n",
-      " afraid that if he did not get into conversation with him, he might make a\n",
+      " and that he had no means of moving.\n",
+      "The old man had not been the first to fall in love. At the\n",
       "\n",
-      " mistake in the future.\n",
-      "Why dont you go away? asked the lieutenant-colonel.\n",
+      " same time, the others had also fallen in love.\n",
+      "The old man could not be sure whether this was a case of jealousy,\n",
       "\n",
-      " Youll be late, my boy.\n",
-      "He did not know why he was so rude, and he did not know whether he\n",
+      " or if it was something else. He was afraid he would be forgotten by\n",
       "\n",
-      " was going to be late or not.\n",
-      "Yes, he said, after a pause. Ive come to you to-day. . . . I\n",
+      " the rest of the town.\n",
+      "The peril of an old man who is ill, in spite of his age,\n",
       "\n",
-      " beg you to be a little more kind.\n",
-      "And the lieutenant-colonel went away.\n",
-      "The lieutenant-colonel was silent for a long while, then he was\n",
+      " and who is never happy, is not to be expected, but it was not\n",
       "\n",
-      " overcome by impatience. The lieutenant-colonel sat down on a stool and\n",
+      " easy to get on without him. His companions and acquaintances\n",
       "\n",
-      " began reading the letter he had just received.\n",
-      "What a letter! he said, and his face was red. How\n",
+      " were afraid of him, and they tried to make him go away, to make him\n",
       "\n",
-      " wonderful it would be to have a letter from you! He was a pretty\n",
+      " happy, and even to get him to come back. He did not\n",
       "\n",
-      " girl and only a little girl.\n",
-      "You are a dear fellow, my boy, he said, and he sat down again on\n",
+      " understand them, and could only say\n",
+      "I dont understand.\n",
+      "He had been in a continual state of dissatisfaction, and was continually\n",
       "\n",
-      " the stool.\n",
-      "Yes, a dear fellow!\n",
-      "The lieutenant-colonel went on, looking at the letter with deep\n",
+      " going to the highroad, and now, having no means of getting to the highroad,\n",
       "\n",
-      " respect and sincerity, and the lieutenant-colonel began to be\n",
+      " he could not walk. He felt exhausted, and was afraid of being left behind\n",
       "\n",
-      " angry and to talk.\n",
-      "I am not a nice fellow, he said, and he felt ashamed.\n",
+      " in the town. He was ashamed to live in the town, and could not\n",
       "\n",
-      " I am not a nice fellow.\n",
-      "But the lieutenant-colonel was angry with him and his wife.\n",
-      "What do you want? he said, and he felt ashamed. I\n",
+      " endure the solitude of the highroad. It was time to go away.\n",
+      "He had not a long way to go, and could only look at the sky, the\n",
       "\n",
-      " will give you my word of honour. I want to hear\n"
+      " white mountains, and the highroad, and think, How beautiful it is!\n",
+      "The old man had not a long way to go, and could only look at the sky,\n",
+      "\n",
+      " the white mountains, and the highroad, and think, How beautiful it is!\n",
+      "He had not the strength to walk, and could only look at the sky,\n",
+      "\n",
+      " the white mountains, and the highroad. He could not look at the sky, the white mountains,\n",
+      "\n",
+      " and the highroad, and think, How beautiful it is! He was tired, and he could not get on\n",
+      "\n",
+      " without his companions and acquaintances, and he could not get on without them.\n",
+      "The old man could not get on without his companions and acquaintances, and he\n",
+      "\n",
+      " could not get on without them. He felt as though he were dreaming, and was not\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -237,20 +245,20 @@
     "    prompt = random.choice(prompts)\n",
     "\n",
     "while len(constraints)<3:\n",
-    "    constraint = random.choice(prompts)\n",
+    "    constraint = random.choice(constraints_list)\n",
     "    if len(constraint)>30:\n",
     "        chunk = \" \".join(constraint.split()[:4]) #first 4 words make the constraint\n",
     "        constraints.append(chunk)\n",
     "    else:\n",
     "        constraint = random.choice(prompts)\n",
-    "story = generate_story(prompt, constraints= constraints)\n",
     "print(f\"Prompt:{prompt}\")\n",
     "print(f\"Constraints:{constraints}\")\n",
+    "story = generate_story(prompt, constraints= constraints)\n",
     "print(f\"Story:\\n {story}\")\n",
     "save_dir = dir_path+\"/generated_texts\"\n",
-    "file_name = f\"/Chekhov style story on {prompt} with constraints {constraints}.txt\"\n",
-    "with open(save_dir+file_name, \"w\") as file:\n",
-    "    file.write(story)"
+    "file_name = f\"{prompt}__{constraints}.txt\"\n",
+    "with open(os.path.join(save_dir, file_name), \"w\") as file:\n",
+    "        file.write(story)\n"
    ]
   }
  ],
